Add UI for selecting moves

--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="assets/styles/reset.css">
     <link rel="stylesheet" href="assets/styles/main.css">
 </head>
 <body>
+    <div class="play_container">
+        <button class="play" id="rock"></button>
+        <button class="play" id="paper"></button>
+        <button class="play" id="scissors"></button>
+    </div>
+    <div class="attribution">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+
     <script src="scripts/main.js"></script>
 </body>
 </html>
