Add scoreboard + opening start button w/ dimmer

--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
     <link rel="stylesheet" href="assets/styles/main.css">
 </head>
 <body>
+    <div id="dimmer"></div>
+    <div id="new_game">
+        <button id="start">START</button>
+    </div>
     <div class="play_container">
         <button class="play" id="rock"></button>
         <button class="play" id="paper"></button>
         <button class="play" id="scissors"></button>
     </div>
+    <div id="scoreboard">
+        <div class="score">HUMAN<span id="player">0</span></div>
+        <div class="score">COMPUTER<span id="computer">0</span></div>
+    </div>
+
     <div class="attribution">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 
     <script src="scripts/main.js"></script>
