Add popup to provide updates about game progess

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="assets/styles/main.css">
 </head>
 <body>
-    <div id="dimmer"></div>
+    <div id="dimmer">
+        <div id="messageboard"><span id="message"></span></div>
+    </div>
 
     <div id="new_game">
         <button id="start">START</button>
@@ -24,6 +26,7 @@
         <div class="score">HUMAN<span id="player">0</span></div>
         <div class="score">COMPUTER<span id="computer">0</span></div>
     </div>
+
 
     <div class="attribution">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 
